--- a/WebApplicationWsei/WebApplicationWsei.csproj
+++ b/WebApplicationWsei/WebApplicationWsei.csproj
@@ -24,4 +24,8 @@
     <PackageReference Include="Swashbuckle.Core" Version="5.6.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
